# TransferFileNetworkP

./: .gitignore  CMakeLists.txt  README.md
client/include/client/: AuthClient.h  Client.h  FileClient.h  GroupClient.h  Session.h
client/src/: AuthClient.cpp  Client.cpp  FileClient.cpp  GroupClient.cpp  main.cpp
common/include/protocol/: bytebuffer.h  checksum.h  packet_header.h  packet_types.h  packets.h
common/src/: packets.cpp
data/: groups.db  users.db
server/include/server/: AuthManager.h  ClientSession.h  DataPaths.h  FileReceiver.h  FileSystemManager.h  GroupManager.h  Logger.h  PermissionChecker.h  Server.h  SessionManager.h
server/include/server/services/: AuthService.h  FileService.h  GroupService.h
server/src/: AuthManager.cpp  ClientSession.cpp  DataPaths.cpp  FileReceiver.cpp  FileSystemManager.cpp  GroupManager.cpp  Logger.cpp  PermissionChecker.cpp  Server.cpp  ServerPackets.cpp  SessionManager.cpp  main.cpp
server/src/services/: AuthService.cpp  FileService.cpp  GroupService.cpp
